# k2treeDISCO

./: .cproject  .gitignore  .project  CMakeLists.txt  CONSTRUIR_MAT_ADY.sh  QUERY_K2TREE.sh  QUERY_MAT_ADY.sh  README.md  build.sh
dataset/: DH_1024.txt  DH_256.txt  DH_64.txt  DH_8.txt
src/: .cproject  BitBasic.h  CMakeLists.txt  ExternalAdjacencyMatrix.h  ExternalBitvect.h  ExternalK2Tree.h  LFUCacheStorage.h  LRUCacheStorage.h  MemoryMesure.c  MemoryMesure.h  Page.h  Pages.h  Storage.h  TimeMesure.h  experiments.h  main.cpp  testBitVector.h  testsAdayacencia.h  testsKtree.h  testsStorage.h  utils.h
test/: .cproject  CMakeLists.txt  pruebas.cpp
